Fix wrapping of HighlightedOperation key figures

--- a/src/views/Home/styles.module.css
+++ b/src/views/Home/styles.module.css
@@ -1,4 +1,30 @@
 .home {
+    .user-dash-content {
+        display: flex;
+        flex-wrap: wrap;
+        gap: var(--go-ui-spacing-lg);
+
+        .operations-following {
+            flex-basis: 40rem;
+            flex-grow: 1;
+            border-radius: var(--go-ui-border-radius-lg);
+            box-shadow: var(--go-ui-box-shadow-md);
+            background-color: var(--go-ui-color-foreground);
+
+            .operations-list {
+                display: contents;
+            }
+        }
+
+        .quick-links {
+            flex-basis: 20rem;
+            flex-grow: 1;
+            border-radius: var(--go-ui-border-radius-lg);
+            box-shadow: var(--go-ui-box-shadow-md);
+            background-color: var(--go-ui-color-foreground);
+        }
+    }
+
     .key-figure-list {
         display: grid;
         grid-gap: var(--go-ui-spacing-md);
@@ -32,35 +58,6 @@
             border-radius: var(--go-ui-border-radius-lg);
             background-color: var(--go-ui-color-white);
             height: 100%;
-        }
-    }
-}
-
-.greeting-card {
-    display: flex;
-    flex-direction: column;
-    gap: var(--go-ui-spacing-lg);
-
-    .operations-card {
-        background-color: var(--go-ui-color-white);
-        padding: var(--go-ui-spacing-lg);
-
-        .operations-list {
-            display: flex;
-            flex-direction: column;
-            gap: var(--go-ui-spacing-md);
-        }
-
-        .quick-card {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
-            gap: var(--go-ui-spacing-md);
-            justify-content: space-between;
-
-            .region-country-link-container {
-                display: inline-flex;
-                gap: var(--go-ui-spacing-sm);
-            }
         }
     }
 }
